Release ...
* [nt]roff: Hyphenation patterns for Dutch have been added (contributed
  by Erwin Koning).
* troff: Do not apply font-specific character translation inside \D,
  which led to wrong output e.g. with \D'l' with an OpenType font with
  the small caps feature activated (bug reported by Russ Cox).
* troff: The "\X" and "\Y" escape sequences are no longer interpreted
  in copy mode, as there is no case when this would be useful, and the
  behavior now matches groff and Plan 9 troff (thanks to Russ Cox).
* dpost: Fixed a case in which invalid backslash sequences were generated
  when insane sizes appeared in intermediate troff input (bug reported by
  Russ Cox).

Release 080407
* [nt]roff: A type definition problem that caused an endless loop on
  64-bit systems has been fixed.
* [nt]roff: The ".warn" request now accepts full numeric expressions
  instead of plain numbers only.
* -mg macros: When reading the output of "ls" to emulate ".mso", use
  nofill mode to avoid artifacts from paragraph adjustment that cause
  the request to fail.
* eqn: Before an equation or binary operator, print a "\|" instead of
  a "\^" if the preceding character is italic. The previous behavior
  resulted from a too far-reaching change in release 051107. (Bug
  reported by Joerg van den Hoff.)
* eqn: Do not displace "hat" and "tilde" horizontally (bug reported by
  Joerg van den Hoff).
* eqn: Fixed the types of yylex() and yypv.

Release 070908
* troff: The ".hw" request now works correctly for words that contain
  ligatures (bug reported by Dirk-Wilhelm Peters).
* troff: Hyphenate correctly when a hyphenation point occurs inside a
  ligature that follows a non-ASCII character. Previously, the word was
  actually hyphenated too early in this situation (bug reported by
  Dirk-Wilhelm Peters).
* troff: Clear the font width cache before mounting a Type 1, TrueType,
  or OpenType font. The previous failure to do so could lead to improper